[tool.poetry]
name = "botpython"
version = "0.1.0"
description = "bot to automate task"
authors = ["caiolul <caiolucena.il@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"
black = "^20.8b1"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
